# retinue

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROVENANCE.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
capture/: STRUCTURE.md  capture_config.py
crates/phy-profile/: Cargo.toml
crates/phy-profile/src/: lib.rs
crates/retinue/: Cargo.toml
crates/retinue/examples/: announce_logger.rs  link_interop.rs  link_peer.rs  link_responder.rs  reqresp_init_probe.rs  reqresp_probe.rs  resource_hmu_probe.rs  resource_recv.rs  resource_send_large.rs  transport_node.rs
crates/retinue/oracle/: capture_buffer.py  capture_channel.py  capture_channel_link.py  capture_hmu.py  capture_identify.py  capture_large_send.py  capture_link.py  capture_link_session.py  capture_resource.py  capture_rnode_serial.py  capture_routing.py  interop_endpoint_stream.py  interop_link.py  interop_link_responder.py  interop_r2.py  interop_resource_send.py  link_crypto_probe.py
crates/retinue/src/: address_book.rs  channel.rs  destination.rs  endpoint.rs  link.rs  lossy.rs  path.rs  reliable.rs  resource.rs  resource_transfer.rs
crates/retinue/src/iface/: hdlc.rs  tcp.rs  tulle.rs
crates/retinue/tests/: endpoint_multi.rs  endpoint_resource.rs  link_session.rs  link_setup_hardening.rs  tulle_interface.rs
crates/retinue/tests/fixtures/: buffer_wire.json  channel_wire.json  link_identify.json  rnode_rx_capture.json  rns_link_proof.json  tcp_manifest.json
crates/selvage/: Cargo.toml
crates/selvage/src/: lib.rs
crates/sennet/: Cargo.toml  PROVENANCE.md  README.md
crates/sennet/capture/: STRUCTURE.md  capture_airmsg.py  capture_config.py  compare_config.py
crates/sennet/examples/: direct_phy_pair.rs  direct_phy_receive.rs  seal_text.rs  seal_transport.rs
crates/sennet/src/: application.rs  node.rs  packet_id.rs  stream.rs  transport.rs
crates/sennet/tests/: structural_capture.rs
crates/sennet/tests/fixtures/: meshtastic_config.json  meshtastic_nodeinfo_baseline_2026-07-23.json  meshtastic_nodeinfo_short_name_2026-07-23.json  meshtastic_textmsg.json
crates/tucket/: Cargo.toml  NOTICE  README.md
crates/tucket/design_docs/: 2026-07-22_meshcore_relay_headed.md
crates/tucket/src/: advert.rs  cipher.rs  mesh.rs  message.rs  packet.rs
crates/tulle/: Cargo.toml  README.md
crates/tulle/examples/: rnode_mtu.rs  rnode_smoke.rs
crates/tulle/firmware/heltec-v4-phy/: Cargo.toml
crates/tulle/firmware/heltec-v4-phy/src/: main.rs
crates/tulle/firmware/t114-phy/: tulle-t114-phy-v5.uf2
crates/tulle/firmware/t114-phy/src/: main.rs
crates/tulle/src/: direct_phy.rs  direct_phy_serial.rs  lib.rs  lora.rs  modem.rs  radio_io.rs
crates/tulle/tests/: rnode_capture.rs
design_docs/: 2026-07-06_retinue_v0_plan.md  2026-07-13_rns_wire_format_reference.md  2026-07-19_heltec_rnode_and_embedded_rust.md  2026-07-19_modem_embedded_and_meshtastic_research.md  2026-07-20_fcc_reselling_flashed_radios.md  2026-07-20_mesh_household_tulle_tucket_sennet.md  2026-07-21_first_reliable_link_over_rf.md  2026-07-22_tulle_headed_acceptance.md  2026-07-23_direct_phy_resource_acceptance.md
examples/: announce_logger.rs  direct_phy_resource.rs  direct_phy_text.rs  endpoint_stream.rs  gemini_over_reticulum.rs  interop_tcp.rs  link_interop.rs  link_peer.rs  link_probe.rs  link_responder.rs  meshcore_headed.rs  r2_pathfind.rs  reqresp_init_probe.rs  reqresp_interop.rs  reqresp_probe.rs  resource_hmu_probe.rs  resource_large_send.rs  resource_probe.rs  resource_recv.rs  resource_send_large.rs  resource_send_multiseg.rs  resource_send_probe.rs  rnode_roundtrip.rs  rnode_smoke.rs  transport_node.rs  tulle_headed.rs
firmware/heltec-v4-phy/: Cargo.toml  README.md
firmware/heltec-v4-phy/src/: main.rs
firmware/t114-phy/: Cargo.toml  README.md  build.rs  memory.x  tulle-t114-phy-v3.uf2  tulle-t114-phy-v4.uf2
firmware/t114-phy/src/: main.rs
oracle/: README.md  capture.py  capture_link_forward.py  capture_pathreq.py  capture_pathresp.py  capture_reqresp.py  capture_reqresp_response.py  capture_resource_send.py  capture_rnode_rx.py  capture_rns_proof.py  capture_tcp.py  interop_endpoint_stream.py  interop_link.py  interop_link_responder.py  interop_r1.py  interop_r2.py  interop_reqresp.py  interop_resource_recv.py  interop_resource_send.py  interop_send_large.py  interop_send_multiseg.py  interop_transport_node.py  requirements.txt  run_live.py
src/: advert.rs  airtime.rs  announce.rs  channel.rs  destination.rs  direct_phy.rs  direct_phy_serial.rs  endpoint.rs  flood.rs  hash.rs  identity.rs  kiss.rs  lib.rs  link.rs  lora.rs  lossy.rs  message.rs  modem.rs  node.rs  node_info.rs  packet.rs  path.rs  protobuf.rs  radio_io.rs  reliable.rs  request.rs  resource.rs  resource_transfer.rs  rnode.rs  serial.rs  token.rs  transport.rs
src/iface/: hdlc.rs  mod.rs
tests/: direct_phy_capture.rs  endpoint_multi.rs  endpoint_resource.rs  link_session.rs  link_setup_hardening.rs  node_info_capture.rs  oracle_fixtures.rs  reliable_stream.rs  rnode_capture.rs  structural_capture.rs  tcp_framing.rs
tests/fixtures/: channel_link.json  link_session.json  manifest.json  meshtastic_airmsg.json  meshtastic_nodeinfo_long_name_2026-07-23.json  path_request.json  rnode_serial_capture.json
