[workspace]
resolver = "2"
members = [
    "crates/retinue",
]
default-members = [
    "crates/retinue",
]

# Inherited from the tulle workspace at the 2026-07-23 radio-family merge, and
# kept byte-identical: the firmware images are flash-size-bound, and `lto` and
# `opt-level` cannot be overridden per package. Host crates in this workspace
# build release at `opt-level = "s"` as a consequence. This does not reach
# consumers — profile settings apply only from the root of the build, so mere
# builds retinue under its own profiles.
[profile.release]
debug = 2
lto = true
opt-level = "s"
codegen-units = 1
