[package]
name = "retinue"
version = "0.0.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mark-ik/retinue"
description = "A Rust implementation of the Reticulum protocol: identity, announces, links, resources, and routing. The protocol is public domain; this is not the reference implementation (reticulum.network)."
keywords = ["reticulum", "mesh", "networking", "p2p", "off-grid"]
categories = ["network-programming"]

[features]
default = ["tokio", "compression"]
# The TCP interface needs a runtime. The wire codec and HDLC framing do not, and stay
# available with default-features = false.
tokio = ["dep:tokio", "dep:getrandom"]
# bz2 for resources. RNS compresses resource payloads by default, so full interop needs
# it; the pure-Rust libbz2-rs-sys backend keeps this a C-free dependency.
compression = ["dep:bzip2"]
tulle-radio = ["tokio", "dep:tulle"]

[dependencies]
aes = "0.9.1"
bzip2 = { version = "0.6.1", optional = true }
cbc = "0.2.1"
# dalek pinned to the 2.x line, not 3.0: retinue only uses the version-stable
# surface (from_bytes / sign / verifying_key / diffie_hellman, no keygen RNG), and
# 2.x coexists cleanly with consumers still on the dalek 3.0.0-pre.x prereleases
# (e.g. iroh, via mere). Major-2 vs major-3 resolve to separate copies; two
# major-3 requirements (^3.0.0 here vs iroh's =3.0.0-pre.6) cannot. Crypto output
# is identical, so the RNS wire fixtures are unaffected.
# RustCrypto digest family pinned to the stable 0.10/0.12 line (not the 0.11-rc
# line) for the same coexistence reason as dalek above: a consumer on the
# prerelease line (iroh-base) pins `sha2 =0.11.0-rc.5` exactly, and rc-vs-final in
# the same 0.11 minor cannot resolve. The stable line is a separate copy. The
# high-level API (Digest, Hkdf::new/expand, Hmac/Mac) is identical, so no code
# changes and the same digest bytes. sha2/hkdf here also match mere's own pins.
ed25519-dalek = "2"
# OS cryptographic randomness for link ephemerals and AES IVs (endpoint only, so tied to
# the tokio feature). Already in the tree via dalek; a direct dep makes the source explicit.
getrandom = { version = "0.2", optional = true }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "time", "macros"], optional = true }
tulle = { version = "0.0.1", path = "../tulle", features = ["serial-async"], optional = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
serde = "1.0.228"
serde_json = "1.0.150"

# Examples and integration tests that drive the endpoint/TCP runtime need the tokio
# feature. Declaring it here lets `--no-default-features` build (and CI check) the
# sans-io core alone by skipping them, instead of failing to compile.

[[example]]
name = "announce_logger"
required-features = ["tokio"]

[[example]]
name = "endpoint_stream"
required-features = ["tokio"]

[[example]]
name = "gemini_over_reticulum"
required-features = ["tokio"]

[[example]]
name = "interop_tcp"
required-features = ["tokio"]

[[example]]
name = "link_interop"
required-features = ["tokio"]

[[example]]
name = "link_peer"
required-features = ["tokio"]

[[example]]
name = "link_probe"
required-features = ["tokio"]

[[example]]
name = "link_responder"
required-features = ["tokio"]

[[example]]
name = "r2_pathfind"
required-features = ["tokio"]

[[example]]
name = "reqresp_init_probe"
required-features = ["tokio"]

[[example]]
name = "reqresp_interop"
required-features = ["tokio"]

[[example]]
name = "reqresp_probe"
required-features = ["tokio"]

[[example]]
name = "resource_hmu_probe"
required-features = ["tokio"]

[[example]]
name = "resource_large_send"
required-features = ["tokio"]

[[example]]
name = "resource_probe"
required-features = ["tokio"]

[[example]]
name = "resource_recv"
required-features = ["tokio"]

[[example]]
name = "resource_send_large"
required-features = ["tokio"]

[[example]]
name = "resource_send_multiseg"
required-features = ["tokio"]

[[example]]
name = "resource_send_probe"
required-features = ["tokio"]

[[example]]
name = "transport_node"
required-features = ["tokio"]

[[example]]
name = "tulle_headed"
required-features = ["tulle-radio"]

[[example]]
name = "direct_phy_resource"
required-features = ["tulle-radio"]

[[test]]
name = "endpoint_multi"
required-features = ["tokio"]

[[test]]
name = "link_setup_hardening"
required-features = ["tokio"]

[[test]]
name = "reliable_stream"
required-features = ["tokio"]

[[test]]
name = "endpoint_resource"
required-features = ["tokio"]

[[test]]
name = "tulle_interface"
required-features = ["tulle-radio"]
