[package]
name = "sennet"
version = "0.0.2"
edition = "2024"
description = "Independent, permissively licensed mesh radio protocol implementation in the retinue family."
license = "MPL-2.0"
repository = "https://github.com/mark-ik/retinue"
readme = "README.md"
keywords = ["lora", "mesh", "radio", "reticulum"]
categories = ["network-programming", "embedded"]

[features]
default = []
hardware = ["dep:tokio", "dep:tulle"]

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
tokio = { version = "1", features = ["macros", "rt", "time"], optional = true }
tulle = { version = "0.0.2", path = "../tulle", features = ["serial-async"], optional = true }

[[example]]
name = "direct_phy_text"
required-features = ["hardware"]

[[example]]
name = "direct_phy_receive"
required-features = ["hardware"]

[[example]]
name = "direct_phy_pair"
required-features = ["hardware"]
