[package]
name = "tulle-heltec-v4-phy"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-executor = "0.10.0"
embassy-futures = "0.1.2"
embassy-time = "0.5.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = "0.7.0"
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32s3", "no-op"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp32s3"] }
lora-modulation = "0.1.5"
lora-phy = { path = "../../vendor/lora-phy" }
selvage = { path = "../../crates/selvage" }
