[package]
name = "tulle-t114-phy"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.11.0", features = ["gpiote", "nrf52840", "time", "time-driver-rtc1", "unstable-pac"] }
embassy-time = "0.5.1"
embassy-usb = { version = "0.6.0", default-features = false }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal-async = "1.0.0"
lora-modulation = "0.1.5"
lora-phy = { path = "../../vendor/lora-phy" }
panic-halt = "1.0.0"
static_cell = "2.1.1"
selvage = { path = "../../crates/selvage" }
